--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,13 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "airbnb",
         "airbnb-typescript"
     ],
     "overrides": [
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
@@ -21,7 +21,9 @@
         "react",
         "@typescript-eslint"
     ],
+    "root": true,
     "rules": {
+        "no-alert": "off",
         "max-len": ["error", 100],
         "complexity": ["error", 8]
     }
